--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   device_preview: ^1.1.0
   intl: ^0.17.0
+  introduction_screen: ^3.1.4
 
 
 dev_dependencies:
