--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   device_preview: ^1.1.0
   intl: ^0.17.0
   settings_ui: ^2.0.2
+  app_settings: ^4.2.0
+  flutter_native_splash: ^2.2.19
 
 
 dev_dependencies:
@@ -73,7 +75,7 @@ dev_dependencies:
   hive_generator: ^2.0.0
   build_runner: ^2.1.11
   json_serializable: ^6.6.0
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.12.0
 
 flutter_icons:
   #  image_path: "assets/images/icon-128x128.png"
